--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,6 +3,15 @@
 html, body {
     margin: 0;
     padding: 0;
+    height: 100%;
+}
+
+#app {
+    height: 100%;
+}
+
+.n-config-provider {
+    height: 100%;
 }
 
 .n-input-number {
